--- a/src/index.css
+++ b/src/index.css
@@ -13,3 +13,13 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+ul {
+  list-style: none;
+}
+li {
+  margin: 0;
+  background-color: rgb(243, 212, 175);
+}
+p {
+  margin: 0;
+}
